RHD-529 Fixed homepage carousel headers size on small screens

--- a/stylesheets/_slider.scss
+++ b/stylesheets/_slider.scss
@@ -64,6 +64,9 @@
     background-size:auto 100%;
     @include mobile-landscape-and-down {
       background-image:cdn("../images/slider/homepage_carousel_join_mobile_bkg.png");
+      h2 {
+        font-size: 55px !important;
+      }
     }
     h2 {
       text-shadow:3px 3px 0 #994030;
